# python-project-lvl4

./: .gitignore  Makefile  README.md  manage.py  pyproject.toml
task_manager/: settings.py
