[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Safintim <timurtlt96@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.9.6"
Django = "^3.2.7"
python-dotenv = "^0.19.0"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.1"
dj-database-url = "^0.5.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
autopep8 = "^1.5.7"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
